<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".details.MovieDetailFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/detail_horizontal_margin"
            android:paddingRight="@dimen/detail_horizontal_margin">

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="@dimen/movie_poster_width_for_detail"
                android:layout_height="@dimen/movie_poster_height_for_detail"
                android:layout_marginBottom="@dimen/movie_poster_vertical_padding"
                android:layout_marginRight="@dimen/movie_poster_padding_right"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movie_title"
                    style="?android:attr/textAppearanceLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/detail_title_bottom_margin"
                    android:layout_marginLeft="@dimen/detail_title_left_padding"
                    android:textColor="@color/text_color_movie_overview"
                    android:textIsSelectable="true"
                    android:textStyle="bold" />

                <include layout="@layout/rating_item" />

                <TextView
                    android:id="@+id/movie_user_rating"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/detail_title_bottom_margin"
                    android:layout_marginBottom="@dimen/detail_title_bottom_margin"
                    android:layout_marginLeft="@dimen/detail_title_left_padding"
                    android:textColor="@color/text_color_movie_overview"
                    android:textIsSelectable="true"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/movie_release_date"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/detail_title_bottom_margin"
                    android:layout_marginLeft="@dimen/detail_title_left_padding"
                    android:textColor="@color/text_color_movie_overview"
                    android:textIsSelectable="true"
                    android:textStyle="bold"/>

                <include layout="@layout/favorite_item" />


            </LinearLayout>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/detail_horizontal_margin"
        android:layout_marginRight="@dimen/detail_horizontal_margin">

        <TextView
            android:id="@+id/overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_overview"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/primary_text"
            android:textStyle="bold"/>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_layout_height"
            android:layout_marginTop="@dimen/view_layout_marginTop"
            android:background="#B6B6B6" />

        <TextView
            android:id="@+id/movie_overview"
            style="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="8dp"
            android:textColor="@color/text_color_movie_overview"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/trailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/tv_trailers"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/primary_text"
            android:textStyle="bold"/>

        <View
            android:id="@+id/divider_trailer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_layout_height"
            android:layout_marginTop="@dimen/view_layout_marginTop"
            android:background="#B6B6B6" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/trailer_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/trailer_list_vertical_padding"
            android:layout_marginLeft="@dimen/trailer_margin_left"
            tools:listitem="@layout/trailer_list_item" />

        <TextView
            android:id="@+id/review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/tv_reviews"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/primary_text"
            android:textStyle="bold"/>

        <View
            android:id="@+id/divider_review"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_layout_height"
            android:layout_marginTop="@dimen/view_layout_marginTop"
            android:background="#B6B6B6" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/review_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="LinearLayoutManager"
            tools:listitem="@layout/review_list_item" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
